<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="sound_off">OFF</string>
    <string name="sound_on">ON</string>
    <string name="preference_sound">Sound</string>
    <string name="hello">Hello World, RockPaperScissors!</string>
    <string name="app_name">Rock Paper Scissors</string>
    <string name="app_id_string">RPS</string>
<string name="menu_newGame">New Game</string>
<string name="dialog_select_color_title">Please select color:</string>
<string-array name="color_select_strings"><item>Red</item>
<item>Black</item>
</string-array>
<string name="button_ok">OK</string>
<string name="menu_about">About</string>
<string name="dialog_about_title">About Rock-Paper-Scissors</string>
<string name="dialog_about_content">&lt;b&gt;Rock Paper Scissors 0.1.0&lt;/b&gt;&lt;br/&gt;Copyright(c) 2010 Michael LI&lt;br/&gt;Author: Michael LI&lt;br/&gt;Email: &lt;a href=\'mailto:kahweh@gmail.com\'&gt;kahweh@gmail.com&lt;/a&gt;&lt;br/&gt;&lt;br/&gt;Find more games at:&lt;br/&gt;&lt;a href=\'http://www.kahweh.com\'&gt;http://www.kahweh.com&lt;/a&gt;</string>
<string name="dialog_select_flag_prompt">Please tap on the board to set the position of Flag.</string>
<string name="dialog_select_flag_title">Place Flag</string>
<string name="dialog_select_trap_title">Place Trap</string>
<string name="dialog_select_trap_prompt">Please tap on the board to set the position of Trap.</string>
<string name="toast_prompt_choose_black_piece">Please select a movable BLUE piece..</string>
<string name="toast_prompt_choose_red_piece">Please select a movable RED piece..</string>
<string name="dialog_conflict_select_title">Please select a gesture:</string>
<string-array name="gesture_select_strings"><item>Rock</item>
<item>Paper</item>
<item>Scissors</item>
</string-array>
<string name="dialog_win_prompt">You WIN!!</string>
<string name="dialog_lose_prompt">You LOSE!!</string>
<string name="dialog_gameover_renew">Play Again</string>
<string name="dialog_gameover_return">Return</string>
<string name="dialog_gameover">Game Over</string>
<string name="menu_setting">Settings</string>
<string-array name="color_select_values"><item>red</item>
<item>black</item>
</string-array>
<string name="preference_color">Your color</string>
<string-array name="preference_boardsize_des"><item>5 × 5</item>
<item>6 × 7</item>
</string-array>
<string-array name="preference_boardsize_values"><item>25</item>
<item>42</item>
</string-array>
<string name="preference_board_size">Board Size</string>
<string-array name="preference_game_level_des"><item>Easy</item>
<item>Middle</item>
<item>Hard</item>
</string-array>
<string-array name="preference_game_level_values"><item>0</item>
<item>1</item>
<item>2</item>
</string-array>
<string-array name="dialog_connection_method"><item>Through Internet</item>
<item>Through Bluetooth</item>
</string-array>
<string name="preference_game_level">Game Level</string>
<string name="preference_player_name">Player Name</string>
<string name="preference_player_default_name">Player1</string>
<string name="str_btn_start">Single Game</string>
<string name="str_btn_remote">Peer Game</string>
<string name="str_btn_preference">Options</string>
<string name="str_btn_help">Help &amp; About</string>
<string name="str_btn_about">About</string>
<string name="about_ahthor">Author:</string>
<string name="about_michael">Michael LI</string>
<string name="about_version">Version:</string>
<string name="about_support">Support:</string>
<string name="version">0.9</string>
<string name="about_copyright_msg">Copyright 2010 Michael LI</string>
<string name="toast_press_again">Press once more to exit</string>
<string name="toast_no_bt_device">Bluetooth is not available..</string>
<string name="dialog_connection_method_title">Connecting Method:</string>
<string name="dialog_connection_method_cancel">Go Back</string>
<string name="str_bt_paired_devicelist_title">Paired Devices</string>
<string name="str_bt_devicelist_title">Available Devices</string>
<string name="str_bt_scandevice_btn">Scan for Games</string>
<string name="str_bt_label">Select a game:</string>
<string name="bt_scanning_title">Scanning...</string>
<string name="bt_not_enabled_leaving">Bluetooth was not enabled..</string>
<string name="bt_none_paired">No device has been paired</string>
<string name="bt_uuid">f39b6f8e-25ce-4069-99c6-0c9f94066546</string>
<string name="bt_listener_socket_error">Cannot create the listening Socket..</string>
<string name="bt_btn_accept_remote">Accept</string>
<string name="bt_btn_refuse_remote">Refuse</string>
<string name="bt_prompt_confirm_remote_connection">A remote player (###) want play with you, Accept or Refuse?</string>
<string name="bt_connection_lost">Connection lost...</string>
</resources>
